# TCAP_VENTURES

./: README.md  ingestion.py  main.py  poc_bollinger_backtest.py  pyproject.toml
