[project]
name = "tcap-ventures"
version = "0.1.0"
description = ""
authors = [
    {name = "NIKHITHA REDDY",email = "nikithareddy.m28@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.51,<0.3.0)",
    "streamlit (>=1.41.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
